--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/1.css">
 </head>
+
 <body>
     <div id="mask"></div>
     <div class="down">往下翻滚吧，宝宝</div>
@@ -16,6 +17,17 @@
             <img src="img/scroll.png" alt="">
         </a>
     </div>
+    <div id="date">
+        <div id="dateO">
+            <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_tr.js"></script>
+            背景透明
+        </div>
+        <div id="dateT">
+            <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.js"></script>
+            背景白色
+        </div>
+    </div>
 </body>
 <script src="js/1.js"></script>
+
 </html>
